--- a/Views/Orders/Details.cshtml
+++ b/Views/Orders/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Orders</h4>
+    <h4>Commande</h4>
     <hr />
     <div class="row">
         <div class="col-md-6">
